<resources>
    <string name="app_name">ImplicitIntents</string>
    <string name="edittext_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>
    <string name="edittext_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>
    <string name="edittext_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>
    <string name="share_text_with">Share this text with</string>
    <string name="enter_web_address">Enter The Web Address</string>
    <string name="show_location">Show Location</string>
    <string name="share_this">Share this</string>
    <string name="take_picture">Take picture</string>
</resources>
